fix pixel at header down arrow on mobile devices

--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -162,7 +162,7 @@ dl {
 
 .first {
   background: url("http://martinlabuschin-github-page.s3.amazonaws.com/down.png") 50% top repeat-x;
-  margin-top: -30px;
+  margin-top: -28px;
   opacity: 0.999;
 }
 
